--- a/views/ranklist.handlebars
+++ b/views/ranklist.handlebars
@@ -1,3 +1,12 @@
+
+
+<br />
+<br />
+{{> navcontest}}
+
+<br />
+<br />
+
 <style>
     table{
     }
@@ -8,10 +17,6 @@
     }
 </style>
 
-{{> navcontest}}
-
-<br />
-<br />
 <h2>Ranklist</h2>
 {{#if cuser.length}}
     {{cuser.[0]}}: {{cuser.[1]}}
@@ -20,6 +25,7 @@
 
 <table border="2px solid black" style = "width:80%">
     <tr>
+        <th>Rank</th>
         <th>Username</th>
         <th>Score</th>
         <th>Penalty</th>
@@ -29,7 +35,9 @@
     </tr>
     {{#each data}}
         <tr>
+            <td>{{rank}}</td>
             <td>{{@key}}</td>
+            
             <td>{{score}}</td>
             <td>{{penalty}}</td>
             {{#each problem}}
