--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
   <h2 class="form-signin-heading">Please sign in</h2>
 
   <label for="inputEmail">Email address</label>
-  <input type="email" id="inputEmail" name="email" placeholder="Email address">
+  <input type="text" id="inputEmail" name="email" placeholder="Email address">
   <br /><br />
   <label for="inputPassword">Password</label>
   <input type="password" id="inputPassword" name="password" placeholder="Password">
