--- a/views/submissions.handlebars
+++ b/views/submissions.handlebars
@@ -112,7 +112,10 @@ Page <z id="lpages"></z> of <z id="llasts"></z>
                     if(x=="Accepted"){
                         document.getElementById(y).style.color="green";
                     }else if(x=="Compiling" || x=="In queue"){
-                        document.getElementById(y).style.color="blue";
+                        document.getElementById(y).style.color="yellow";
+                    }
+                    else if(x=="CE"){
+                        document.getElementById(y).style.color="orange";
                     }
                     else{
                         document.getElementById(y).style.color="red";
