--- a/views/status.handlebars
+++ b/views/status.handlebars
@@ -17,6 +17,7 @@
     }
     .verd{
        font-weight:600;
+       font-size: 14px;
         
     }
 
@@ -92,10 +93,10 @@ Page <z id="lpage"></z> of <z id="llast"></z>
                     if(x=="Accepted"){
                         document.getElementById(y).style.color="green";
                     }else if(x=="Compiling" || x=="In queue"){
-                        document.getElementById(y).style.color="yellow";
+                        document.getElementById(y).style.color="DodgerBlue";
                     }
                     else if(x=="CE"){
-                        document.getElementById(y).style.color="orange";
+                        document.getElementById(y).style.color="Orange";
                     }
                     else{
                         document.getElementById(y).style.color="red";
