--- a/views/partials/navcontest.handlebars
+++ b/views/partials/navcontest.handlebars
@@ -6,6 +6,6 @@
 
 <a class="navca" href="/contests/quespage">Problems</a>
 {{#if isAuthenticated}}
-    <a class="navca" href="/users/{{user}}/submissions/1">Submissions</a>
+    <a class="navca" href="/users/submissions/{{user}}/submissions/1">Submissions</a>
 {{/if}}
 <a class="navca" href="/contests/status/1">Status</a>
